--- a/css/styles.css
+++ b/css/styles.css
@@ -17,8 +17,8 @@ body {
   overflow-x: hidden;
 }
 body {
-  margin: 0px;
   max-width: 1400px;
+  margin: auto;
 }
 h1,
 h2,
@@ -75,13 +75,13 @@ main {
   padding-left: 24px;
   padding-right: 24px;
 }
-.selectedNavButton {
+/* .selectedNavButton {
   font-weight: 500;
   width: 50%;
   padding-top: calc(var(--header-padding-top) - 2px);
   border-top: 2px solid var(--main-blue);
   color: var(--main-blue);
-}
+} */
 .navButton {
   font-weight: 400;
   width: 50%;
@@ -89,7 +89,7 @@ main {
 }
 .navButton:hover {
   color: var(--main-blue);
-  border-top: 2px solid #318aff;
+  border-top: 2px solid var(--main-blue);
   padding-top: calc(var(--header-padding-top) - 2px);
 }
 
@@ -563,18 +563,17 @@ footer {
     padding-bottom: 24px;
     margin-top: 32px;
   }
-  .selectedNavButton {
+  /* .selectedNavButton {
     border-top: 0px;
     border-bottom: 3px solid var(--main-blue);
-  }
+  } */
   .navButton {
     border-bottom: 3px solid var(--gray);
   }
   .navButton:hover {
-    color: var(--main-blue);
     border-top: none;
     padding-top: var(--header-padding-top);
-    border-bottom: 3px solid #318aff;
+    border-bottom: 3px solid var(--main-blue);
     padding-bottom: calc(var(--header-padding-top) - 3px);
   }
 
